--- a/packages/component-library/draft/Kaizen/Form/Primitives/Label/styles.scss
+++ b/packages/component-library/draft/Kaizen/Form/Primitives/Label/styles.scss
@@ -42,7 +42,7 @@ $label-start-padding: 10px;
 
   .labelText {
     @include ca-padding($start: $label-start-padding);
-    transform: translateY(-0.11em); // optically centre label
+    // transform: translateY(-0.11em); // optically centre label
   }
 }
 .checkbox {
